# f-salis

./: fsalis.cabal
app/: Config.hs  Core.hs  Main.hs
app/Arch/: Dummy.hs
app/UI/: Benchmark.hs
