cabal-version: 3.4

name:       fsalis
version:    0.1.0.0
author:     Paul Oliver
maintainer: contact@pauloliver.dev
build-type: Simple

executable fsalis
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Arch.Dummy
        Config
        Core
        UI.Benchmark
    ghc-options:
        -O2
        -Wall
        -fllvm
        -funbox-strict-fields
        -rtsopts
        -threaded
    build-depends:
        base
      , bimap
      , monad-par
      , mtl
      , splitmix
      , vector
      , vector-th-unbox
    default-language: GHC2021
